Refactoring: fetching image activity was replaced with fragment, permission request flow was moved into the library module.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.route4me.vehiclenum.StartRecognitionActivity">
+        <activity android:name="com.route4me.vehiclenum.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +26,7 @@
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="ocr" />
 
-        <activity android:name="com.route4me.licenseplate.StillImageActivity" android:exported="true"/>
+        <activity android:name="com.route4me.licenseplate.GetImageFragment" android:exported="true"/>
     </application>
 
 
